@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-16T16:19:31Z",
+  "timestamp" : "2022-05-17T08:16:27Z",
   "count_outdated" : 267,
   "uniques_outdated" : 133,
-  "count" : 305,
-  "uniques" : 158,
+  "count" : 307,
+  "uniques" : 160,
   "clones" : [
     {
       "timestamp": "2022-05-04T00:00:00Z",
@@ -88,6 +88,13 @@
       "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-17T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
