@@ -1,6 +1,6 @@
 {
-  "count": 38,
-  "uniques": 13,
+  "count": 40,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-05-04T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-17T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
