@@ -1,3 +1,10 @@
+2022-05-17T08:16:27Z:
+* notice: last 14d: all unq: 40 14
+* notice: prev accum: outdated-all outdated-unq / all unq: 267 133 / 305 158
+* notice: next accum: outdated-all outdated-unq / all unq: 267 133 / 307 160
+* notice: prev exec diff / last date diff: unq all: +2 +2 -0 -0 / +2 +2 -0 -0
+* notice: changed dates: [2022-05-17]
+
 2022-05-16T16:19:31Z:
 * notice: last 14d: all unq: 38 13
 * notice: prev accum: outdated-all outdated-unq / all unq: 267 133 / 304 157
